Add an index entry

--- a/tex/p069.tex
+++ b/tex/p069.tex
@@ -24,7 +24,7 @@
 \vs p069 2:2 Before the dawn of early frugality and primitive industry the lot of the average tribe was one of destitution and real suffering. Early man had to compete with the whole animal world for his food. Competition\hyp{}gravity ever pulls man down toward the beast level; poverty is his natural and tyrannical estate. Wealth is not a natural gift; it results from labour, knowledge, and organization.
 \vs p069 2:3 Primitive man was not slow to recognize the advantages of association. Association led to organization, and the first result of organization was division of labour, with its immediate saving of time and materials. These specializations of labour arose by adaptation to pressure --- pursuing the paths of lessened resistance. Primitive savages never did any real work cheerfully or willingly. With them conformity was due to the coercion of necessity.
 \vs p069 2:4 Primitive man disliked hard work, and he would not hurry unless confronted by grave danger. The time element in labour, the idea of doing a given task within a certain time limit, is entirely a modern notion. The ancients were never rushed. It was the double demands of the intense struggle for existence and of the ever\hyp{}advancing standards of living that drove the naturally inactive races of early man into avenues of industry.
-\vs p069 2:5 Labour, the efforts of design, distinguishes man from the beast, whose exertions are largely instinctive. The necessity for labour is man’s paramount blessing. The Prince’s staff all worked; they did much to ennoble physical labour on Urantia. Adam was a gardener; the God of the Hebrews laboured --- he was the creator and upholder of all things. The Hebrews were the first tribe to put a supreme premium on industry; they were the first people to decree that “he who does not work shall not eat.” But many of the religions of the world reverted to the early ideal of idleness. Jupiter was a reveller, and Buddha became a reflective devotee of leisure.
+\vs p069 2:5 Labour, the efforts of design, distinguishes man from the beast, whose exertions are largely instinctive. The necessity for labour is man’s paramount blessing. The Prince’s staff all worked; they did much to ennoble physical labour on Urantia. Adam was a gardener; the God of the Hebrews laboured --- he was the creator and upholder of all things. The Hebrews were the first tribe to put a supreme premium on industry; they were the first people to decree that “he who does not work shall not eat.” But many of the religions of the world reverted to the early ideal of idleness. Jupiter\index{Gods!Pagan!Jupiter} was a reveller, and Buddha became a reflective devotee of leisure.
 \vs p069 2:6 The Sangik tribes were fairly industrious when residing away from the tropics. But there was a long, long struggle between the lazy devotees of magic and the apostles of work --- those who exercised foresight.
 \vs p069 2:7 The first human foresight was directed toward the preservation of fire, water, and food. But primitive man was a natural\hyp{}born gambler; he always wanted to get something for nothing, and all too often during these early times the success which accrued from patient practice was attributed to charms. Magic was slow to give way before foresight, self\hyp{}denial, and industry.
 \usection{The Specialization of Labour}
