Index restructure: Gods!Pagan! => Pagan gods!

--- a/tex/p085.tex
+++ b/tex/p085.tex
@@ -14,7 +14,7 @@
 \usection{Worship of Stones and Hills}
 \vs p085 1:1 The first object to be worshipped by evolving man was a stone. Today the Kateri people of southern India still worship a stone, as do numerous tribes in northern India. Jacob slept on a stone because he venerated it; he even anointed it. Rachel concealed a number of sacred stones in her tent.
 \vs p085 1:2 Stones first impressed early man as being out of the ordinary because of the manner in which they would so suddenly appear on the surface of a cultivated field or pasture. Men failed to take into account either erosion or the results of the overturning of soil. Stones also greatly impressed early peoples because of their frequent resemblance to animals. The attention of civilized man is arrested by numerous stone formations in the mountains which so much resemble the faces of animals and even men. But the most profound influence was exerted by meteoric stones which primitive humans beheld hurtling through the atmosphere in flaming grandeur. The shooting star was awesome to early man, and he easily believed that such blazing streaks marked the passage of a spirit on its way to earth. No wonder men were led to worship such phenomena, especially when they subsequently discovered the meteors. And this led to greater reverence for all other stones. In Bengal many worship a meteor which fell to earth in A.D.\,1880.
-\vs p085 1:3 All ancient clans and tribes had their sacred stones, and most modern peoples manifest a degree of veneration for certain types of stones --- their jewels. A group of 5 stones was reverenced in India; in Greece it was a cluster of 30; among the red men it was usually a circle of stones. The Romans always threw a stone into the air when invoking Jupiter. In India even to this day a stone can be used as a witness. In some regions a stone may be employed as a talisman of the law, and by its prestige an offender can be haled into court. But simple mortals do not always identify Deity with an object of reverent ceremony. Such fetishes are many times mere symbols of the real object of worship.
+\vs p085 1:3 All ancient clans and tribes had their sacred stones, and most modern peoples manifest a degree of veneration for certain types of stones --- their jewels. A group of 5 stones was reverenced in India; in Greece it was a cluster of 30; among the red men it was usually a circle of stones. The Romans always threw a stone into the air when invoking Jupiter\index{Pagan gods!Jupiter}. In India even to this day a stone can be used as a witness. In some regions a stone may be employed as a talisman of the law, and by its prestige an offender can be haled into court. But simple mortals do not always identify Deity with an object of reverent ceremony. Such fetishes are many times mere symbols of the real object of worship.
 \vs p085 1:4 The ancients had a peculiar regard for holes in stones. Such porous rocks were supposed to be unusually efficacious in curing diseases. Ears were not perforated to carry stones, but the stones were put in to keep the ear holes open. Even in modern times superstitious persons make holes in coins. In Africa the natives make much ado over their fetish stones. In fact, among all backward tribes and peoples stones are still held in superstitious veneration. Stone worship is even now widespread over the world. The tombstone is a surviving symbol of images and idols which were carved in stone in connection with beliefs in ghosts and the spirits of departed fellow beings.
 \vs p085 1:5 Hill worship followed stone worship, and the first hills to be venerated were large stone formations. It presently became the custom to believe that the gods inhabited the mountains, so that high elevations of land were worshipped for this additional reason. As time passed, certain mountains were associated with certain gods and therefore became holy. The ignorant and superstitious aborigines believed that caves led to the underworld, with its evil spirits and demons, in contrast with the mountains, which were identified with the later evolving concepts of good spirits and deities.
 \usection{Worship of Plants and Trees}
