--- a/tex/p098.tex
+++ b/tex/p098.tex
@@ -14,7 +14,7 @@
 \usection{The Salem Religion among the Greeks}
 \vs p098 1:1 The Salem missionaries might have built up a great religious structure among the Greeks had it not been for their strict interpretation of their oath of ordination, a pledge imposed by Machiventa which forbade the organization of exclusive congregations for worship, and which exacted the promise of each teacher never to function as a priest, never to receive fees for religious service, only food, clothing, and shelter. When the Melchizedek teachers penetrated to pre\hyp{}Hellenic Greece, they found a people who still fostered the traditions of Adamson and the days of the Andites, but these teachings had become greatly adulterated with the notions and beliefs of the hordes of inferior slaves that had been brought to the Greek shores in increasing numbers. This adulteration produced a reversion to a crude animism with bloody rites, the lower classes even making ceremonial out of the execution of condemned criminals.
 \vs p098 1:2 The early influence of the Salem teachers was nearly destroyed by the so\hyp{}called Aryan invasion from southern Europe and the East. These Hellenic invaders brought along with them anthropomorphic God concepts similar to those which their Aryan fellows had carried to India. This importation inaugurated the evolution of the Greek family of gods and goddesses. This new religion was partly based on the cults of the incoming Hellenic barbarians, but it also shared in the myths of the older inhabitants of Greece.
-\vs p098 1:3 The Hellenic Greeks found the Mediterranean world largely dominated by the mother cult, and they imposed upon these peoples their man\hyp{}god, Dyaus\hyp{}Zeus\index{Gods!Pagan!Zeus|(}, who had already become, like Yahweh among the henotheistic Semites, head of the whole Greek pantheon of subordinate gods. And the Greeks would have eventually achieved a true monotheism in the concept of Zeus except for their retention of the overcontrol of Fate. A God of final value must, himself, be the arbiter of fate and the creator of destiny.
+\vs p098 1:3 The Hellenic Greeks found the Mediterranean world largely dominated by the mother cult, and they imposed upon these peoples their man\hyp{}god, Dyaus\hyp{}Zeus\index{Pagan gods!Zeus|(}, who had already become, like Yahweh among the henotheistic Semites, head of the whole Greek pantheon of subordinate gods. And the Greeks would have eventually achieved a true monotheism in the concept of Zeus except for their retention of the overcontrol of Fate. A God of final value must, himself, be the arbiter of fate and the creator of destiny.
 \vs p098 1:4 As a consequence of these factors in religious evolution, there presently developed the popular belief in the happy\hyp{}go\hyp{}lucky gods of Mount Olympus, gods more human than divine, and gods which the intelligent Greeks never did regard very seriously. They neither greatly loved nor greatly feared these divinities of their own creation. They had a patriotic and racial feeling for Zeus and his family of half men and half gods, but they hardly reverenced or worshipped them.
 \vs p098 1:5 The Hellenes became so impregnated with the antipriestcraft doctrines of the earlier Salem teachers that no priesthood of any importance ever arose in Greece. Even the making of images to the gods became more of a work in art than a matter of worship.
 \vs p098 1:6 The Olympian gods illustrate man’s typical anthropomorphism. But the Greek mythology was more aesthetic than ethic. The Greek religion was helpful in that it portrayed a universe governed by a deity group. But Greek morals, ethics, and philosophy presently advanced far beyond the god concept, and this imbalance between intellectual and spiritual growth was as hazardous to Greece as it had proved to be in India.
@@ -34,7 +34,7 @@
 \usection{The Melchizedek Teachings in Rome}
 \vs p098 3:1 Having grown out of the earlier religious forms of worship of the family gods into the tribal reverence for Mars, the god of war, it was natural that the later religion of the Latins was more of a political observance than were the intellectual systems of the Greeks and Brahmans or the more spiritual religions of several other peoples.
 \vs p098 3:2 In the great monotheistic renaissance of Melchizedek’s gospel during the VI century before Christ, too few of the Salem missionaries penetrated Italy, and those who did were unable to overcome the influence of the rapidly spreading Etruscan priesthood with its new galaxy of gods and temples, all of which became organized into the Roman state religion. This religion of the Latin tribes was not trivial and venal like that of the Greeks, neither was it austere and tyrannical like that of the Hebrews; it consisted for the most part in the observance of mere forms, vows, and taboos.
-\vs p098 3:3 Roman religion was greatly influenced by extensive cultural importations from Greece. Eventually most of the Olympian gods were transplanted and incorporated into the Latin pantheon. The Greeks long worshipped the fire of the family hearth --- Hestia was the virgin goddess of the hearth; Vesta was the Roman goddess of the home. Zeus\index{Gods!Pagan!Zeus|)} became Jupiter;\index{Gods!Pagan!Zeus} Aphrodite,\index{Gods!Pagan!Aphrodite} Venus;\index{Gods!Pagan!Venus} and so on down through the many Olympian deities.
+\vs p098 3:3 Roman religion was greatly influenced by extensive cultural importations from Greece. Eventually most of the Olympian gods were transplanted and incorporated into the Latin pantheon. The Greeks long worshipped the fire of the family hearth --- Hestia was the virgin goddess of the hearth; Vesta was the Roman goddess of the home. Zeus\index{Pagan gods!Zeus|)} became Jupiter;\index{Pagan gods!Jupiter} Aphrodite,\index{Pagan gods!Aphrodite} Venus;\index{Pagan gods!Venus} and so on down through the many Olympian deities.
 \vs p098 3:4 The religious initiation of Roman youths was the occasion of their solemn consecration to the service of the state. Oaths and admissions to citizenship were in reality religious ceremonies. The Latin peoples maintained temples, altars, and shrines and, in a crisis, would consult the oracles. They preserved the bones of heroes and later on those of the Christian saints.
 \vs p098 3:5 This formal and unemotional form of pseudoreligious patriotism was doomed to collapse, even as the highly intellectual and artistic worship of the Greeks had gone down before the fervid and deeply emotional worship of the mystery cults. The greatest of these devastating cults was the mystery religion of the Mother of God sect, which had its headquarters, in those days, on the exact site of the present church of St. Peter’s in Rome.
 \vs p098 3:6 \pc The emerging Roman state conquered politically but was in turn conquered by the cults, rituals, mysteries, and god concepts of Egypt, Greece, and the Levant. These imported cults continued to flourish throughout the Roman state up to the time of Augustus, who, purely for political and civic reasons, made a heroic and somewhat successful effort to destroy the mysteries and revive the older political religion.
