--- a/tex/p132.tex
+++ b/tex/p132.tex
@@ -8,7 +8,7 @@
 \uminitoc{Trips about Rome}
 \author{Midwayer Commission}
 \vs p132 0:1 Since Gonod carried greetings from the princes of India to Tiberius, the Roman ruler, on the third day after their arrival in Rome the two Indians and Jesus appeared before him. The morose emperor was unusually cheerful on this day and chatted long with the trio. And when they had gone from his presence, the emperor, referring to Jesus, remarked to the aide standing on his right, “If I had that fellow’s kingly bearing and gracious manner, I would be a real emperor, eh?”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jesus-Meets-Tiberius.jpg}\caption{Jesus Meets Tiberius by Slawa Radziszewska}\end{figure}}
-\vs p132 0:2 \pc While at Rome, Ganid had regular hours for study and for visiting places of interest about the city. His father had much business to transact, and desiring that his son grow up to become a worthy successor in the management of his vast commercial interests, he thought the time had come to introduce the boy to the business world. There were many citizens of India in Rome, and often one of Gonod’s own employees would accompany him as interpreter so that Jesus would have whole days to himself; this gave him time in which to become thoroughly acquainted with this city of 2,000,000 inhabitants. He was frequently to be found in the forum, the centre of political, legal, and business life. He often went up to the Capitolium and pondered the bondage of ignorance in which these Romans were held as he beheld this magnificent temple dedicated to Jupiter, Juno, and Minerva. He also spent much time on Palatine hill, where were located the emperor’s residence, the temple of Apollo, and the Greek and Latin libraries.
+\vs p132 0:2 \pc While at Rome, Ganid had regular hours for study and for visiting places of interest about the city. His father had much business to transact, and desiring that his son grow up to become a worthy successor in the management of his vast commercial interests, he thought the time had come to introduce the boy to the business world. There were many citizens of India in Rome, and often one of Gonod’s own employees would accompany him as interpreter so that Jesus would have whole days to himself; this gave him time in which to become thoroughly acquainted with this city of 2,000,000 inhabitants. He was frequently to be found in the forum, the centre of political, legal, and business life. He often went up to the Capitolium and pondered the bondage of ignorance in which these Romans were held as he beheld this magnificent temple dedicated to Jupiter,\index{Pagan gods!Jupiter} Juno, and Minerva. He also spent much time on Palatine hill, where were located the emperor’s residence, the temple of Apollo, and the Greek and Latin libraries.
 \vs p132 0:3 \pc At this time the Roman Empire included all of southern Europe, Asia Minor, Syria, Egypt, and north\hyp{}west Africa; and its inhabitants embraced the citizens of every country of the Eastern Hemisphere. His desire to study and mingle with this cosmopolitan aggregation of Urantia mortals was the chief reason why Jesus consented to make this journey.
 \vs p132 0:4 Jesus learned much about men while in Rome, but the most valuable of all the manifold experiences of his six months’ sojourn in that city was his contact with, and influence upon, the religious leaders of the empire’s capital. Before the end of the first week in Rome Jesus had sought out, and had made the acquaintance of, the worth\hyp{}while leaders of the Cynics, the Stoics, and the mystery cults, in particular the Mithraic group. Whether or not it was apparent to Jesus that the Jews were going to reject his mission, he most certainly foresaw that his messengers were presently coming to Rome to proclaim the kingdom of heaven; and he therefore set about, in the most amazing manner, to prepare the way for the better and more certain reception of their message. He selected 5 of the leading Stoics, 11 of the Cynics, and 16 of the mystery\hyp{}cult leaders and spent much of his spare time for almost 6 months in intimate association with these religious teachers. And this was his method of instruction: Never once did he attack their errors or even mention the flaws in their teachings. In each case he would select the truth in what they taught and then proceed so to embellish and illuminate this truth in their minds that in a very short time this enhancement of the truth effectively crowded out the associated error; and thus were these Jesus\hyp{}taught men and women prepared for the subsequent recognition of additional and similar truths in the teachings of the early Christian missionaries. It was this early acceptance of the teachings of the gospel preachers which gave that powerful impetus to the rapid spread of Christianity in Rome and from there throughout the empire.
 \vs p132 0:5 The significance of this remarkable doing can the better be understood when we record the fact that, out of this group of 32 Jesus\hyp{}taught religious leaders in Rome, only two were unfruitful; the 30 became pivotal individuals in the establishment of Christianity in Rome, and certain of them also aided in turning the chief Mithraic temple into the first Christian church of that city. We who view human activities from behind the scenes and in the light of 19 centuries of time recognize just 3 factors of paramount value in the early setting of the stage for the rapid spread of Christianity throughout Europe, and they are:
