Simplify the title page

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -12,14 +12,14 @@
 \vspace*{\stretch{0.1}}
 \begin{center}
 {
-\booktitlefontsize THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
-\offontsize OF\\
-\booksubtitlefontsize THE URANTIA PAPERS\\
+\booktitlefontsize
+THE FIFTH EPOCHAL\\
+REVELATION\\
 }%
 {%
 \vspace*{\stretch{0.1}}
 \subsubtitlefontsize
-The Revised Text in British English\tunemarkuptwo{nofnt}{\\[2ex]}{%
+The British Study Edition of the Urantia Papers\tunemarkuptwo{nofnt}{\\[2ex]}{%
 ,\\
 With \totalnfnsts\ Notes, Index \&\ \totalfigures\ Illustrations\\
 \tunemarkup{bible}{%
