--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -674,13 +674,12 @@
 \tunemarkup{pgkobomini}{%
 \newcommand{\pdftype}{5" eInk}
 \renewcommand{\uminitoc}[1]{}
-\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{12.6}{20}\selectfont}
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{18}{24}\selectfont}
 \newcommand{\offontsize}{\fontsize{10}{20}\selectfont}
-\newcommand{\booksubtitlefontsize}{\fontsize{16.6}{20}\selectfont}
 \newcommand{\subsubtitlefontsize}{\fontsize{11}{14}\itshape}
 \newcommand{\introfontsize}{\fontsize{14}{16}\selectfont}
 \newcommand{\infofontsize}{\fontsize{9}{10}\itshape}
-\def\phoenixscale{0.16}
+\def\phoenixscale{0.15}
 \tolerance=9999
 \newcommand{\authorfont}{\authorfontfamily\fontsize{19}{9}\bfseries\itshape}%
 \renewcommand{\bibheadfont}{\headingfont\fontsize{6.9}{6.9}\selectfont}
@@ -712,7 +711,6 @@
 \renewcommand{\uminitoc}[1]{}
 \newcommand{\booktitlefontsize}{\parttitlefont\fontsize{12}{20}\selectfont}
 \newcommand{\offontsize}{\fontsize{9}{20}\selectfont}
-\newcommand{\booksubtitlefontsize}{\fontsize{15.8}{22}\selectfont}
 \newcommand{\subsubtitlefontsize}{\fontsize{9}{12}\itshape}
 \newcommand{\introfontsize}{\fontsize{13}{16}\selectfont}
 \newcommand{\infofontsize}{\fontsize{7}{10}\itshape}
@@ -746,9 +744,8 @@
 
 \tunemarkup{pgkoboaurahd}{%
 \newcommand{\pdftype}{7" eInk}
-\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{13.6}{20}\selectfont}
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{17}{24}\selectfont}
 \newcommand{\offontsize}{\fontsize{12}{20}\selectfont}
-\newcommand{\booksubtitlefontsize}{\fontsize{18}{23}\selectfont}
 \newcommand{\subsubtitlefontsize}{\fontsize{11}{13}\itshape}
 \newcommand{\introfontsize}{\fontsize{16}{18}\selectfont}
 \newcommand{\infofontsize}{\fontsize{9}{11}\itshape}
@@ -756,7 +753,7 @@
    \stepcounter{uminitocnum}%
    {\minitocfontsize\makebox[0.08\linewidth][r]{\theuminitocnum.\,}\makebox[0.85\linewidth][l]{\uppercase{#1}\bibdf}\makebox[0.06\linewidth][r]{\bibpr{p\thepaper_\theuminitocnum}}\\[-1.6ex]}%
 }
-\def\phoenixscale{0.16}
+\def\phoenixscale{0.15}
 \setcounter{DefaultLines}{3}
 \tolerance=3000
 \protected\def\print@vssup#1{\makebox[0.4em][l]{\@textsuperscript{\fontsize{7}{7}\bfseries#1}}\kern0.3em\relax}
@@ -789,16 +786,15 @@
 
 \tunemarkup{pgauraone}{%
 \newcommand{\pdftype}{8" eInk}
-\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{15}{20}\selectfont}
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{19}{26}\selectfont}
 \newcommand{\offontsize}{\fontsize{12}{20}\selectfont}
-\newcommand{\booksubtitlefontsize}{\fontsize{20}{23}\selectfont}
 \newcommand{\subsubtitlefontsize}{\fontsize{12}{14}\itshape}
 \newcommand{\infofontsize}{\fontsize{9}{11}\itshape}
 \renewcommand{\uminitoc}[1]{%
    \stepcounter{uminitocnum}%
    {\minitocfontsize\makebox[0.08\linewidth][r]{\theuminitocnum.\,}\makebox[0.85\linewidth][l]{\uppercase{#1}\bibdf}\makebox[0.06\linewidth][r]{\bibpr{p\thepaper_\theuminitocnum}}\\[-1.2ex]}%
 }
-\def\phoenixscale{0.17}
+\def\phoenixscale{0.15}
 \tolerance=3000
 \renewcommand{\numw}{0.07\linewidth}
 \renewcommand{\txtw}{0.85\linewidth}
@@ -814,7 +810,7 @@
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubred}{rgb}{0.0, 0.0, 0.0}
-\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\Large ahb}}
+\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\large ahb}}
 \newcommand{\subfont}{\fontsize{15}{18}\itshape}
 \newcommand{\parttitlefontsize}{\parttitlefont\LARGE}
 \newcommand{\bibtocsuperheadfont}{\fontsize{17}{17}\selectfont}
@@ -830,13 +826,12 @@
 
 \tunemarkup{pgnexus10}{%
 \newcommand{\pdftype}{10" Colour}
-\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{17.3}{28}\selectfont}
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{22}{30}\selectfont}
 \newcommand{\offontsize}{\fontsize{14}{28}\selectfont}
-\newcommand{\booksubtitlefontsize}{\fontsize{23}{30}\selectfont}
 \newcommand{\subsubtitlefontsize}{\fontsize{15}{20}\itshape}
 \newcommand{\introfontsize}{\fontsize{17}{19}\selectfont}
 \newcommand{\infofontsize}{\fontsize{12}{16}\itshape}
-\def\phoenixscale{0.18}
+\def\phoenixscale{0.17}
 \tolerance=500
 \protected\def\print@vssup#1{\makebox[0.4em][l]{\@textsuperscript{\fontsize{7}{7}\bfseries#1}}\kern0.3em\relax}
 \setcounter{DefaultLines}{3}
@@ -870,13 +865,12 @@
 
 \tunemarkup{pgthinmob}{%
 \newcommand{\pdftype}{20:9 Colour}
-\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{12.1}{20}\selectfont}
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{16}{22}\selectfont}
 \newcommand{\offontsize}{\fontsize{10}{20}\selectfont}
-\newcommand{\booksubtitlefontsize}{\fontsize{16}{20}\selectfont}
 \newcommand{\subsubtitlefontsize}{\fontsize{10}{12}\itshape}
 \newcommand{\introfontsize}{\fontsize{15}{18}\selectfont}
 \newcommand{\infofontsize}{\fontsize{8}{10}\itshape}
-\def\phoenixscale{0.2}
+\def\phoenixscale{0.14}
 \tolerance=9999
 \protected\def\print@vssup#1{\makebox[0.2em][r]{\@textsuperscript{\fontsize{10}{10}\selectfont#1}}\kern0.2em\relax}
 \definecolor{ubpagecolor}{rgb}{0.0, 0.0, 0.2}
@@ -886,7 +880,7 @@
 \definecolor{ubgreen}{rgb}{0.0, 0.4, 0.0}
 \definecolor{ubred}{rgb}{0.8, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.8}
-\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\large\textcolor{ubblue}{ahb}}}
+\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\normalsize\textcolor{ubblue}{ahb}}}
 \newcommand{\bibpaperfont}{\titlefont\fontsize{13}{15}\selectfont}
 \newcommand{\bibpapertitlefont}{\titlefont\fontsize{15}{17}\bfseries}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.2}{7.2}\selectfont}
@@ -907,13 +901,12 @@
 
 \tunemarkup{pgnexus7}{%
 \newcommand{\pdftype}{16:9 Colour}
-\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{12.1}{20}\selectfont}
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{15}{20}\selectfont}
 \newcommand{\offontsize}{\fontsize{10}{20}\selectfont}
-\newcommand{\booksubtitlefontsize}{\fontsize{16}{20}\selectfont}
 \newcommand{\subsubtitlefontsize}{\fontsize{10}{12}\itshape}
 \newcommand{\introfontsize}{\fontsize{15}{18}\selectfont}
 \newcommand{\infofontsize}{\fontsize{8}{10}\itshape}
-\def\phoenixscale{0.2}
+\def\phoenixscale{0.13}
 \tolerance=9999
 \setcounter{DefaultLines}{2}
 \protected\def\print@vssup#1{\makebox[0.2em][r]{\@textsuperscript{\fontsize{10}{10}\selectfont#1}}\kern0.2em\relax}
@@ -924,7 +917,7 @@
 \definecolor{ubgreen}{rgb}{0.0, 0.4, 0.0}
 \definecolor{ubred}{rgb}{0.8, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.8}
-\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\large\textcolor{ubgreen}{ahb}}}
+\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\normalsize\textcolor{ubgreen}{ahb}}}
 \newcommand{\bibpaperfont}{\titlefont\fontsize{13}{15}\selectfont}
 \newcommand{\bibpapertitlefont}{\titlefont\fontsize{15}{17}\bfseries}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.2}{7.2}\selectfont}
@@ -945,13 +938,12 @@
 
 \tunemarkup{pgafour}{%
 \newcommand{\pdftype}{A4 B\&W}
-\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{25.7}{34}\selectfont}
+\newcommand{\booktitlefontsize}{\parttitlefont\fontsize{32}{40}\selectfont}
 \newcommand{\offontsize}{\fontsize{24}{34}\selectfont}
-\newcommand{\booksubtitlefontsize}{\fontsize{34}{38}\selectfont}
 \newcommand{\subsubtitlefontsize}{\fontsize{20}{25}\itshape}
 \newcommand{\introfontsize}{\fontsize{16}{19}\selectfont}
 \newcommand{\infofontsize}{\large\itshape}
-\def\phoenixscale{0.17}
+\def\phoenixscale{0.15}
 \tolerance=200
 \def\pc{{\fontsize{9}{0}\selectfont§§}\kern4pt}
 \setcounter{DefaultLines}{3}
@@ -963,7 +955,7 @@
 \definecolor{ubred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
-\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\fontsize{28}{28}\selectfont ahb}}
+\newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\fontsize{24}{24}\selectfont ahb}}
 \newcommand{\bibtocsuperheadfont}{\fontsize{30}{30}\selectfont}
 \renewcommand{\bibtocheadfont}{\fontsize{19}{19}\mdseries}
 \renewcommand{\bibtocfont}{\fontsize{12.3}{20}\selectfont}
@@ -985,7 +977,6 @@
 \tunemarkup{pgcrownq}{%
 \newcommand{\pdftype}{Crown Quarto B\&W}
 \newcommand{\offontsize}{\parttitlefont\fontsize{24}{34}\selectfont}
-\newcommand{\booksubtitlefontsize}{\fontsize{30}{38}\selectfont}
 \newcommand{\subsubtitlefontsize}{\fontsize{19}{24}\itshape}
 \newcommand{\introfontsize}{\fontsize{14}{17}\selectfont}
 \newcommand{\infofontsize}{\Large\itshape}
@@ -1022,7 +1013,6 @@
 \newcommand{\pdftype}{10" eInk}
 \newcommand{\booktitlefontsize}{\parttitlefont\fontsize{20.8}{32}\selectfont}
 \newcommand{\offontsize}{\fontsize{16.5}{32}\selectfont}
-\newcommand{\booksubtitlefontsize}{\fontsize{25}{32}\selectfont}
 \newcommand{\subsubtitlefontsize}{\fontsize{16}{18}\itshape}
 \newcommand{\introfontsize}{\fontsize{17}{21}\selectfont}
 \newcommand{\infofontsize}{\fontsize{10}{12}\itshape}
